# minimise

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  FOLLOWUP_PLAN_STATUS.md  LICENSE  README.md  TESTING.md  agent-harness-plan.yaml  llms.txt  pyproject.toml  setup.py  test-bad-plan.yaml  test-e2e-duration.yaml  test-feat-plan.yaml  test-simple-plan.yaml
.claude-plugin/: README.md  marketplace.json  plugin.json
.lavish/: minimise-design.html
.superpowers/sdd/: progress.md  task-1-fix-report.md  task-1-report.md  task-1-review-package.txt  task-2-report.md  task-2-review-package.txt  (+10 more)
agents/: README.md
examples/: cli-redesign-plan.yaml  example-loop.yaml  example-plan.yaml  fix-cancel-job.yaml  fix-gantt-timing.yaml  refactor-terminal-ui.yaml  test-gantt.yaml  test-verification.yaml
minimise.egg-info/: SOURCES.txt
plans/: ponytail-fleet-remaining.yaml  ponytail-fleet.yaml  refactor-todict-cli-split.yaml  required-duration-and-job-totals.yaml
tests/: conftest.py  test_api_server.py  test_cli.py  test_database.py  test_doctor.py  test_git_tracker.py  test_handover_manager.py  test_harness.py  test_harness_integration.py  test_hook_executor.py  test_job_controller.py  test_job_executor.py  test_job_manager.py  test_job_store.py  test_logquery.py  test_loop_engine.py  test_loop_journal.py  test_loop_store.py  test_models.py  test_narration_reader.py  test_persona_cli.py  test_personas.py  test_plan_review_cli.py  test_plan_reviewer.py  test_plan_validator.py  test_plugin_manifest.py  test_settings.py  test_task_executor.py  test_terminal_ui.py  test_utils.py
(+100 files in other folders)
